# skell-e-router

./: .cursorrules  .gitignore  README.md  check_interaction.py  deep_research_20251222_113105.txt  example.py  example_rich_response.py  pyproject.toml  test_grounding.py
.claude/: settings.local.json
docs/: TASKS.md
docs/ai-conversations/: 2026-05-05-add-embedding-models-clean.txt  2026-05-05-add-embedding-models.txt
docs/superpowers/plans/: 2026-05-05-embedding-models.md
docs/superpowers/specs/: 2026-05-05-embedding-models-design.md  2026-05-08-audio-input-design.md
plans/: gemini-deep-research-integration.md  rich-response-object.md
skell_e_router/: Skell-E-Router-DOCUMENTATION.md  __init__.py  anthropic_direct.py  embeddings.py  gemini_deep_research.py  gemini_direct.py  model_config.py  response.py  utils.py
skell_e_router/examples/: example.py  example_audio_input.py  example_deep_research.py  example_deep_research_stream_detailed.py  example_embeddings.py  example_image_input.py  example_image_output.py
skelle_ai_router/: __init__.py
tests/: conftest.py  helpers.py  test_anthropic_direct.py  test_config.py  test_deep_research.py  test_embeddings.py  test_gemini_direct.py  test_model_config.py  test_response.py  test_utils.py
