[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "skell-e-router"
version = "1.0.5"
description = "Simple AI router using LiteLLM."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stan Prokopenko" }]
dependencies = ["litellm>=1.43.0", "tenacity>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["skell_e_router"]