[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "skell-e-router"
version = "2.0.1"
description = "Simple AI router using LiteLLM with Gemini Deep Research Agent support."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stan Prokopenko" }]
dependencies = [
    "litellm>=1.43.0",
    "tenacity>=8.0.0",
    "google-genai>=1.0.0",  # Required for Gemini Deep Research Agent
]

[tool.hatch.build.targets.wheel]
packages = ["skell_e_router"]